# MusicScience37

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Pipfile  README.md  cspell.json  pyproject.toml  tool.py
.devcontainer/: Dockerfile  devcontainer.json  setup.bash
dev_docs/: internationalization.md  国際化の手順.md
public/: _redirects
source/: conf.py  index.rst
source/internal/: ci-status.md  repositories.yaml  repositories_schema.json  repository-states.rst
source/locale/en/LC_MESSAGES/: index.po
source/locale/en/LC_MESSAGES/internal/: ci-status.po  index.po
source/locale/en/LC_MESSAGES/music/: compositions.po  recordings.po
source/locale/en/LC_MESSAGES/research/: papers.po
source/locale/en/LC_MESSAGES/software/: repositories.po
source/music/: compositions.rst  recordings.rst
source/research/: papers.bib  papers.rst
source/software/: repositories.rst
